# AQL

./: .gitignore  AQL_ARTICLE.md  AQL_spec.md  AQL_spec_v2.md  Cargo.toml  LICENSE  README.md
aql-cli/: Cargo.toml
aql-cli/src/: main.rs
aql-core/: Cargo.toml
aql-core/src/: affect.rs  ast.rs  attention.rs  capabilities.rs  energy.rs  error.rs  executor.rs  grammar.pest  lib.rs  memory.rs  multiagent.rs  parser.rs  planner.rs  plans.rs  reactive.rs  result.rs  traits.rs  types.rs  uncertainty.rs
aql-mssql/: Cargo.toml
aql-mssql/src/: backend.rs  lib.rs  lowering.rs
aql-mysql/: Cargo.toml
aql-mysql/src/: backend.rs  lib.rs  lowering.rs
aql-neo4j/: Cargo.toml
aql-neo4j/src/: backend.rs  lib.rs  lowering.rs
aql-nietzschedb/: Cargo.toml  build.rs
aql-nietzschedb/src/: backend.rs  dream.rs  hyperbolic.rs  lib.rs  lowering.rs
aql-pgvector/: Cargo.toml
aql-pgvector/src/: backend.rs  lib.rs  lowering.rs
aql-python/: Cargo.toml  pyproject.toml
aql-python/python/aql/: __init__.py
aql-python/src/: lib.rs
aql-qdrant/: Cargo.toml
aql-qdrant/src/: backend.rs  lib.rs  lowering.rs
aql-redis/: Cargo.toml
aql-redis/src/: backend.rs  lib.rs  lowering.rs
aql-sqlite/: Cargo.toml
aql-sqlite/src/: backend.rs  lib.rs  lowering.rs
aql-wasm/: Cargo.toml
aql-wasm/src/: lib.rs
md/: AQL_article.md
