[package]
name = "aql-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AQL — Agent Query Language core: parser, AST, planner, executor"

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
