[package]
name = "aql-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AQL MySQL/MariaDB backend — relational with full-text search"

[dependencies]
aql-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
