[package]
name = "aql-neo4j"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AQL Neo4j backend — graph-strong with Cypher lowering"

[dependencies]
aql-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
