[package]
name = "aql-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AQL Python bindings via PyO3"

[lib]
name = "aql"
crate-type = ["cdylib"]

[dependencies]
aql-core = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = { workspace = true }
