[package]
name = "aql-qdrant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AQL Qdrant backend — vector-strong with REST/gRPC"

[dependencies]
aql-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
