[package]
name = "aql-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AQL WebAssembly build for browser and edge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aql-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
